# atlas-contracts

./: Cargo.toml  LICENSE  README.md
crates/atlas-index/: Cargo.toml
crates/atlas-index/src/: analyzers.rs  config.rs  lib.rs  per_component.rs  rename_match.rs  schema.rs  surfaces.rs  yaml_io.rs
crates/atlas-index/tests/: golden_snapshots.rs
crates/atlas-index/tests/snapshots/: components.overrides.yaml  components.yaml  external-components.yaml
crates/component-ontology/: Cargo.toml  README.md
crates/component-ontology/src/: cli.rs  component_id.rs  defaults.rs  lib.rs  schema.rs  yaml_io.rs
defaults/: ontology.yaml
website/: index.md  meta.yml
