[workspace]
resolver = "2"
members = [
    "crates/component-ontology",
    "crates/atlas-index",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/linkuistics/atlas-contracts"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
tempfile = "3"
thiserror = "2.0.18"

[workspace.lints.rust]
warnings = "deny"
