[package]
name = "atlas-index"
version = "0.1.0"
description = "Schema and reader for the four Atlas YAMLs; rename-matching and merge-with-overrides."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
component-ontology = { path = "../component-ontology" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
